src/mesa/drivers/dri/i965/brw_fs.h
@@ -410,6 +410,7 @@ public:
 
       this->frag_depth = NULL;
       memset(this->outputs, 0, sizeof(this->outputs));
+      memset(this->output_components, 0, sizeof(this->output_components));
       this->first_non_payload_grf = 0;
       this->max_grf = intel->gen >= 7 ? GEN7_MRF_HACK_START : BRW_MAX_GRF;
 
